--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,17 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'pure-form pure-form-stacked', method: :put}) do |f| %>
   <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
+    <%= f.input :username, placeholder: 'username' %>
+    <%= f.input :email, placeholder: 'email' %>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+    <%= f.input :password, autocomplete: "off", placeholder: 'new password' %><br>
+    <span><i>Leave blank if you don't want to change your password</i></span>
+    <%= f.input :password_confirmation, autocomplete: "off", placeholder: 'confirm new password' %>
+    <%= f.input :current_password, autocomplete: "off", placeholder: 'current password to save changes' %>
+    <%= f.submit "Save", class: 'pure-button pure-button-primary' %>
 <% end %>
 
 <h3>Cancel my account</h3>
