--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,8 +7,7 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-    <%= f.input :password, autocomplete: "off", placeholder: 'new password' %><br>
-    <span><i>Leave blank if you don't want to change your password</i></span>
+    <%= f.input :password, autocomplete: "off", placeholder: 'new password',label: "Leave blank if no pw change:" %>
     <%= f.input :password_confirmation, autocomplete: "off", placeholder: 'confirm new password' %>
     <%= f.input :current_password, autocomplete: "off", placeholder: 'current password to save changes' %>
     <%= f.submit "Save", class: 'pure-button pure-button-primary' %>
@@ -16,6 +15,6 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'pure-button' %></p>
 
 <%= link_to "Back", :back %>
