--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <div class="pad-box">
       <div id="user-status" class="pure-u-2-5">
       <% if current_user %>
-        <span>Welcome, #{current_user.username}</span>
+        <span>Welcome, <%= link_to current_user.username, edit_user_registration_path %> || <%= link_to "Log out", destroy_user_session_path, method: :delete %></span>
       <% else %>
         <%= link_to "Sign In", new_user_session_path %> || <%= link_to "Sign Up", new_user_registration_path %></span>
       <% end %>
