--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title><%= content_for?(:title) ? yield(:title) : "BlocMetrics" %></title>
-
+    <%= javascript_include_tag('application') %>
     <%= stylesheet_link_tag    "application" %>
     <%= csrf_meta_tags %>
   </head>
