--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,11 +28,13 @@
     </div>
   </div>
     <div id="left-bar" class="pure-u-1-5">
-      <h2>BlocMetrics</h2>
+      <h2><a href="/">BlocMetrics</a></h2>
     </div>
     <div id="main-content" class="pure-u-4-5">
+      <div class="pad-box">
 <%= render 'welcome/show_flash' %>
     <%= yield %>
+      </div>
     </div>
 
   </div>
