--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,11 +55,6 @@ body {
   word-wrap: break-word;
   border-radius: 0 15em/0.8em;
   
-  .btn {
-    border-radius: 5px;
-    font-size: 115%;
-    padding: 0.4em 2em;
-  }
   a{color:$gray}
   a:hover{color: white;}
 
@@ -71,6 +66,35 @@ body {
   form {
     position: relative;
     top:-15px;
+  }
+
+  .pure-button-primary {
+    width: 40%;
+    display: inline-block;
+    border-radius: 5px;
+    font-size: 115%;
+    text-align: center;
+    padding: .5em 0;
+  }
+  .sign_in_btn {
+    background: $green;
+    box-shadow: inset 0 0 0 0 $green;
+    -webkit-transition: all ease 0.8s;
+    transition: all ease 0.8s;
+  }
+  .sign_in_btn:hover {
+    box-shadow: inset 200px 0px 0px 0 white;
+    color: $green;
+  }
+  .sign_up_btn {
+    background: $orange;
+    box-shadow: inset 0 0 0 0 $orange;
+    -webkit-transition: all ease 0.8s;
+    transition: all ease 0.8s
+  }
+  .sign_up_btn:hover{
+    box-shadow: inset 0 100px 0 0 white;
+    color: $orange;
   }
 }
 
