--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,8 @@
       <% else %>
         <%= render 'devise/sessions/sign_in' %>
       <% end %>
-      </div>
+    </div>
+    <%= link_to "About", welcome_about_path %>
   </div></div>
   <div id="main-content" class="pure-u-4-5">
     <div class="pad-box">
