--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -1,4 +1,7 @@
 #welcome.pure-g
   .pure-u-2-5
+    %h1 BlocMetrics: Free and Easy Web Analytics
+    %p BlocMetrics is a free web analytics service that is easy to implement on your websites. Simply add our javascript snippet to your pages, and we'll automagically start tracking how your guests use your site. 
+    %p #{ link_to 'Sign up', new_user_registration_path } now to get started.
   .hugest.pure-u-3-5
     BlocMetrics
