--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -101,6 +101,12 @@ body {
     box-shadow: inset 0 100px 0 0 white;
     color: $orange;
   }
+
+  #left-links {
+    position: relative;
+    left: -10px;
+    top: -1em;
+  }
 }
 
 #home-link {
