--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,2 +1,7 @@
-%h1 Users#show
-%p Hello, #{@user.username}
+#user-show.pure-g
+  #user-domains.pure-u-4-5  
+    %h1 #{@user.username}
+    %h2 Your Domains
+  #user-stats.pure-u-1-5
+    .pad-box
+
