--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,9 +4,11 @@
     %h2 Your Domains
     - if @user.domains.any?
       %ul#domains-list
-        = @user.domains.each do |d|
+        - @user.domains.each do |d|
           = content_tag :li do
-            link_to d.name, domain_path(d)
+            = link_to d.name, domain_path(d)
+            %br
+            [ some info about #{d.name} ]
     = link_to "New Domain", new_user_domain_path(current_user), class: 'pure-button pure-button-primary new_domain_btn'
   #user-stats.pure-u-1-5
     .pad-box
