--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,6 +50,33 @@ body {
 #main-flash.alert { background-color: $orange; }
 
 .pad-box {padding: 1em;}
+.pure-button-primary {
+  width: 45%;
+  display: inline-block;
+  border-radius: 5px;
+  text-align: center;
+  padding: .5em 0;
+}
+.sign_in_btn {
+  background: $green;
+  box-shadow: inset 0 0 0 0 $green;
+  -webkit-transition: all ease 0.8s;
+  transition: all ease 0.8s;
+}
+.sign_in_btn:hover {
+  box-shadow: inset 200px 0px 0px 0 white;
+  color: $green;
+}
+.sign_up_btn {
+  background: $orange;
+  box-shadow: inset 0 0 0 0 $orange;
+  -webkit-transition: all ease 0.8s;
+  transition: all ease 0.8s
+}
+.sign_up_btn:hover{
+  box-shadow: inset 0 100px 0 0 white;
+  color: $orange;
+}
 
 #left-bar {
   background-color: $red;
@@ -59,7 +86,10 @@ body {
   border-radius: 0 15em/1.1em;
   
   a{color:$bluish;}
-  h2 a {color:$gray;}
+  h2 a {
+    color:$gray;
+    text-shadow: 1px 0 2px $bluish;
+  }
   a:hover{color:white;}
 
   #user-status{
@@ -72,35 +102,7 @@ body {
     top:-15px;
   }
 
-  input {max-width: 100%;}
-
-  .pure-button-primary {
-    width: 45%;
-    display: inline-block;
-    border-radius: 5px;
-    text-align: center;
-    padding: .5em 0;
-  }
-  .sign_in_btn {
-    background: $green;
-    box-shadow: inset 0 0 0 0 $green;
-    -webkit-transition: all ease 0.8s;
-    transition: all ease 0.8s;
-  }
-  .sign_in_btn:hover {
-    box-shadow: inset 200px 0px 0px 0 white;
-    color: $green;
-  }
-  .sign_up_btn {
-    background: $orange;
-    box-shadow: inset 0 0 0 0 $orange;
-    -webkit-transition: all ease 0.8s;
-    transition: all ease 0.8s
-  }
-  .sign_up_btn:hover{
-    box-shadow: inset 0 100px 0 0 white;
-    color: $orange;
-  }
+  input {max-width: 100%;}  
 
   #left-links {
     position: relative;
@@ -110,6 +112,10 @@ body {
 }
 
 #user-show {
+  h1 {
+    color: white;
+    text-shadow: 1px 0 4px $gray;
+  }
 
   #user-stats {
 
