--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,6 +77,16 @@ body {
   box-shadow: inset 0 100px 0 0 white;
   color: $orange;
 }
+.delete_btn{
+  background: $orange;
+  box-shadow: inset 0 0 0 0 $orange;
+  -webkit-transition: all ease 0.8s;
+  transition: all ease 0.8s;
+}
+.delete_btn:hover{
+  box-shadow: inset 100px 0 50px 50px black;
+  color: $red;
+}
 
 #left-bar {
   background-color: $red;
