index events by domain and remove pundit

--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -16,7 +16,7 @@
       %ul
       -@events.each do |k,v|
         =content_tag :li do
-          =k + ": #{k.length}"
+          =k + ": #{v.length}"
 
 
   #delete-domain
