--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -77,6 +77,20 @@ body {
   box-shadow: inset 0 100px 0 0 white;
   color: $orange;
 }
+#new_user .pure-button {
+  width: auto;
+  color: black;
+  border: 1px solid $gray;
+  padding: 0.5em;
+  margin-top: 10px;
+  -webkit-transition: all ease 0.8s;
+  transition: all ease 0.8s;
+}
+#new_user .pure-button:hover {
+  background: $green;
+  border: 3px solid white;
+  color: white;
+}
 .new_domain_btn {
   width: auto;
   padding: 0.5em;
