--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,8 +7,8 @@
         - @user.domains.each do |d|
           = content_tag :li do
             = link_to d.name, domain_path(d)
-            %br
-            [ some info about #{d.name} ]
+            > recording #{d.events.group_by(&:name).length} event types
+    %br
     = link_to "New Domain", new_user_domain_path(current_user), class: 'pure-button pure-button-primary new_domain_btn'
   #user-stats.pure-u-1-5
     .pad-box
