add a line graph to domain show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -184,6 +184,12 @@ body {
     top: -36px;
     left: 20px;
   }
+
+  #events-pie, #events-line {
+    position: absolute;
+    top: 6em;
+  }
+  #events-line{right:0;}
 }
 
 #how-to {
