--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -21,9 +21,9 @@
             =content_tag :li do
               =k + ": #{v.length}"
         #events-pie.pure-u-2-5
-          = pie_chart @domain.events.group(:name).count
+          = pie_chart @domain.events.group(:name).count, library: {title: 'Total Events by Type',backgroundColor: 'none'}
         #events-line.pure-u-2-5
-          
+          = line_chart @domain.events.group_by_day(:created_at), library: {title: 'Total Events by Day', backgroundColor: "none"} 
 
   #delete-domain
     %h3 Delete this domain
